# tiko

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  load_data.sql  note.txt  postgresql.conf.sample  postgresql.tiko.conf  run_branch_test.sh  run_pg_test.sh  run_pitr_test.sh  run_test.sh  run_test2.sh  run_test3.sh  run_test4.sh  s3mgr_design.md  wal_streaming.md
.claude/: settings.local.json
.github/prompts/: plan-chunkIoLocks.prompt.md
cli/: Cargo.toml
cli/legacy/: tiko_ctl.rs  tiko_restore.rs
cli/legacy/tiko_ctl/: make_template.rs  restore.rs
cli/scripts/: make_baseline.sh
cli/src/: lib.rs  pg_stubs.rs  pgops.rs
core/: Cargo.toml
core/src/: cache.rs  chunk.rs  db.rs  env.rs  error.rs  io_queue.rs  lib.rs  manifest.rs  nblocks_table.rs  ops.rs  org.rs  pgcontrol.rs  pitr.rs  pitr_task.rs  project.rs  recovery.rs  relfork.rs  s3_ops.rs  sim_store.rs  store_ops.rs  wal_streaming.rs
core/src/io/: cache.rs  checkpoint_history.rs  checkpoints.rs  draft.rs  fork_nblocks.rs  io_control.rs  io_queue.rs  locator.rs  mod.rs  rwlock.rs  stats.rs  store.rs  timeline.rs
core/src/io/cache/: chunk.rs  control.rs  meta.rs  mod.rs  rwlock.rs
core/src/io/storage/: mod.rs  s3.rs  s3_sim.rs  storage.rs
core/src/io/store/: backend.rs  locator.rs  mod.rs  s3.rs  s3_sim.rs  store.rs
core/src/io/utils/: mod.rs  rw_lock.rs  spin_lock.rs
core/src/store/: backend.rs  mod.rs  ops.rs  s3.rs  s3_sim.rs  store.rs
docs/: note.txt  tikoblk.md  tikovm-design.md  wildcat-sandman-polaris.md
engine/: Cargo.toml
engine/src/: cache.rs  io_queue.rs  lib.rs  nblocks_table.rs  pitr_task.rs  s3_ops.rs  wal_streaming.rs
pgctl/: Cargo.toml
pgctl/src/: lib.rs  main.rs  pgops.rs  server.rs
pgctl/tests/: fake_initdb.sh  fake_pg_ctl.sh  http_api.rs
pgsys/: Cargo.toml
pgsys/src/: aio.rs  bgworker.rs  common.rs  condition_variable.rs  cshim.rs  latch.rs  lib.rs  logging.rs  lsn.rs  lwlock.rs  shmem.rs  smgr.rs  timeline_id.rs  utils.rs  wait_events.rs
s3smgr/: Cargo.toml
s3smgr/src/: aio.rs  checkpoint.rs  lib.rs  pipeline.rs  wal_archive.rs
s3smgr/src/smgr/: close.rs  create.rs  exists.rs  extend.rs  fd.rs  immedsync.rs  init.rs  maxcombine.rs  mod.rs  nblocks.rs  open.rs  prefetch.rs  readv.rs  registersync.rs  shutdown.rs  startreadv.rs  truncate.rs  unlink.rs  writeback.rs  writev.rs  zeroextend.rs
s3worker/: Cargo.toml  cache_design.md  pitr_design.md  pitr_imp.md
s3worker/src/: cache.rs  dispatcher.rs  io_handler.rs  io_queue.rs  lib.rs  log_relay.rs  main_loop.rs  manifest.rs  pitr_task.rs  project.rs  recovery.rs  s3_ops.rs  shmem.rs  sim_store.rs  thread_pool.rs  wait_events.rs  worker.rs
scripts/: build_initramfs.sh  build_postgres.sh  cleanup.sh  create_rootfs.sh  download_kernel.sh  init_pg.sh  load_data.sql  mount_s3files_vm.sh  postgrest.conf  postgrest_setup.sql  run_branch_test.sh  run_large_data_test.sh  run_pg_test.sh  run_pitr_test.sh  run_test.sh  run_test2.sh  run_test4.sh  s3files-creds.env.sample  start_pg.sh  stress_cleanup.sh  stress_create_dbs.sh  tiko_pitr.sh  tikoguest.service  vmtop.py
scripts/tikoblk/: run_test.sh  (+3 more)
smgr/: Cargo.toml
smgr/src/: aio.rs  buffers.rs  checkpoint.rs  lib.rs  pipeline.rs
smgr/src/smgr/: close.rs  immedsync.rs  open.rs  prefetch.rs  truncate.rs  writeback.rs
smgr/src/smgr_impl/: close.rs  create.rs  exists.rs  extend.rs  fd.rs  immedsync.rs  init.rs  maxcombine.rs  mod.rs  nblocks.rs  prefetch.rs  readv.rs  registersync.rs  shutdown.rs  startreadv.rs  truncate.rs  unlink.rs  writeback.rs  writev.rs  zeroextend.rs
store/: Cargo.toml
store/src/: chunk.rs  lib.rs  manifest.rs  org.rs  project.rs  recovery.rs  sim_store.rs
tiko/: base_manifest.tikm
tikoblk/: Cargo.toml
tikoblk/scripts/: tikoblk-module.service  tikoblkd.service
tikoblk/src/: backend.rs  cache.rs  chunk.rs  chunkstore.rs  control.rs  crc32.rs  device.rs  gc.rs  lib.rs  main.rs  map.rs  metrics.rs  registry.rs  volume.rs
tikod/: Cargo.toml  tikod.entitlements  tikod_design.md
tikod/docs/: initial-benchmark.md  proxy-strategy.md  s3-files-setup.md
tikod/examples/: boot_test.rs
tikod/scripts/: bench_insert.sql  build_initramfs.sh  create_rootfs.sh  download_kernel.sh  initramfs_init.sh  make_pgdata_skeleton.sh  pgctl.service  resume_vm.sh  shutdown_vm.sh  snapshot_vm.sh  start_pg.sh  start_vm.sh  stop_vm.sh  tiko_branch.sh  tiko_env.sh  tiko_restore.sh  tikoguest.service  vm_config.json  vmtop.py
tikod/src/: api.rs  compute.rs  config.rs  dbcontrol.rs  gc.rs  guestcontrol.rs  lease.rs  lib.rs  lifecycle.rs  main.rs  orchestrate.rs  org.rs  pitr.rs
tikod/src/api/: client.rs  mod.rs  server.rs
tikod/src/control/: mod.rs
tikod/src/http_proxy/: mod.rs
tikod/src/node/: mod.rs
tikod/src/proxy/: cancel.rs  error.rs  mod.rs  startup.rs
tikod/src/vmm/: apple_vz.rs  firecracker.rs  mod.rs
tikod/tests/: api_http.rs  db_routes.rs
tikoguest/: Cargo.toml
tikoguest/src/: backup.rs  env.rs  http.rs  lib.rs  main.rs  observer.rs  pgmetrics.rs  pgops.rs  postgrest.rs  scaler.rs  server.rs  service.rs
tikoguest/tests/: fake_initdb.sh  fake_pg_ctl.sh  http_api.rs
tikovm-guest/: Cargo.toml
tikovm-guest/examples/: echo-server.rs
tikovm-guest/src/: controlsrv.rs  fs.rs  health.rs  hostlink.rs  idle.rs  lib.rs  main.rs  manifest.rs  supervisor.rs
tikovm-host/: Cargo.toml
tikovm-host/src/: config.rs  control.rs  guestlink.rs  lib.rs  main.rs  metrics.rs  node.rs  scheduler.rs  store.rs
tikovm-host/src/api/: mod.rs  server.rs
tikovm-host/src/proxy/: mod.rs
tikovm-host/src/storage/: mod.rs  s3files_image.rs  ublk.rs  volume.rs
tikovm-host/src/vmm/: firecracker.rs  mock.rs  mod.rs
tikovm-protocol/: Cargo.toml
tikovm-protocol/src/: codec.rs  error.rs  lib.rs  manifest.rs  routing.rs  rpc.rs  vm.rs  volume.rs
worker/: Cargo.toml  build.rs  cache_design.md  pitr_design.md  pitr_imp.md
worker/src/: cache.rs  dispatcher.rs  io_handler.rs  io_queue.rs  lib.rs  log_relay.rs  main_loop.rs  pitr_task.rs  s3_ops.rs  shmem.rs  thread_pool.rs
worker/src/tasks/: compactor.rs  mod.rs  wal_receiver.rs
(+30 files in other folders)
