[workspace]
members = [
  "cli",
  "smgr",
  "store",
  "tikod",
  "pgsys",
  "worker",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
homepage = ""
repository = ""
license = "Apache-2.0"
rust-version = "1.88"

[workspace.dependencies]
libc = "0.2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"
zstd = "0.13"
tar = "0.4"
tempfile = "3"