[workspace]
members = [
  "cli",
  "core",
  "tikoguest",
  "pgsys",
  "smgr",
  "tikoblk",
  "tikod",
  "tikovm-host",
  "tikovm-guest",
  "tikovm-protocol",
  "worker",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
homepage = ""
repository = ""
license = "Apache-2.0"
rust-version = "1.88"

[workspace.dependencies]
bytes = "1.11.1"
chrono = "0.4.44"
libc = "0.2.185"
rmp-serde = "1.3.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tar = "0.4.45"
tempfile = "3.27.0"
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["full"] }
tracing = "0.1.44"
zstd = "0.13.3"