[package]
name = "cli"
description = "Tiko operator CLI tools: tiko_archive, tiko_restore, manifest_viewer"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[[bin]]
name = "tiko_ctl"
path = "src/bin/tiko_ctl.rs"

[[bin]]
name = "tiko_archive"
path = "src/bin/tiko_archive.rs"

[[bin]]
name = "tiko_restore"
path = "src/bin/tiko_restore.rs"

[[bin]]
name = "manifest_viewer"
path = "src/bin/manifest_viewer.rs"

[dependencies]
core = { path = "../core" }
pgsys = { path = "../pgsys" }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
zstd = { workspace = true }
clap = { version = "4", features = ["derive", "env"] }
