[package]
name = "engine"
description = "Tiko I/O engine: shared-memory cache, IPC queue, block-level S3 ops"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
pgsys = { path = "../pgsys" }
store = { path = "../store" }
libc = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rmp-serde = { workspace = true }
zstd = { workspace = true }
tar = { workspace = true }
tempfile = { workspace = true }
