[package]
name = "s3worker"
description = "S3 background worker"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "tiko_archive"
path = "src/bin/tiko_archive.rs"

[[bin]]
name = "tiko_restore"
path = "src/bin/tiko_restore.rs"

[[bin]]
name = "manifest_viewer"
path = "src/bin/manifest_viewer.rs"

[dependencies]
pgsys = { path = "../pgsys" }
store = { path = "../store" }
libc = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rmp-serde = { workspace = true }
zstd = { workspace = true }
tar = { workspace = true }
tempfile = "3"
