[package]
name = "smgr"
description = "Tiko storage manager, implements the PostgreSQL `smgr` interface"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[lib]
name = "tikosmgr"
crate-type = ["staticlib", "rlib"]

[dependencies]
pgsys = { path = "../pgsys" }
core = { path = "../core" }
libc = { workspace = true }
tracing = { workspace = true }
zstd = { workspace = true }
tar = { workspace = true }

[dev-dependencies]
tempfile = "3"