[package]
name = "store"
description = "Shared storage layer: chunk types, manifest, project, sim store, recovery"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
pgsys = { path = "../pgsys" }
serde = { workspace = true }
serde_json = { workspace = true }
rmp-serde = { workspace = true }
zstd = { workspace = true }
tempfile = { workspace = true }
