[package]
name = "tikod"
edition = "2024"
version.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
store = { path = "../store" }
pgsys = { path = "../pgsys" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { version = "4", features = ["derive"] }
axum = { version = "0.8" }
tar = { workspace = true }
uuid = { version = "1", features = ["v4"] }
tempfile = { workspace = true }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }