[package]
name = "tikoguest"
description = "Guest-side agent for tikod: Postgres control, observability, freeze"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[[bin]]
name = "tikoguest"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
tokio-postgres = "0.7"
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
clap = { version = "4", features = ["derive", "env"] }
