[package]
name = "worker"
description = "Tiko background worker run by PostgreSQL"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[lib]
name = "tikoworker"
crate-type = ["cdylib", "rlib"]

[dependencies]
pgsys = { path = "../pgsys" }
store = { path = "../store" }
engine = { path = "../engine" }
libc = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rmp-serde = { workspace = true }
zstd = { workspace = true }
tar = { workspace = true }
tempfile = { workspace = true }
